--- a/src/pos/tsconfig.json
+++ b/src/pos/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
+    "noImplicitAny": false,
     "target": "esnext",
     "module": "esnext",
     "strict": true,
     "jsx": "preserve",
     "importHelpers": true,
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -17,7 +17,6 @@
       "mocha",
       "chai"
     ],
-    "files" : [],
     "paths": {
       "@/*": [
         "src/*"
